src/main/kotlin/com/example/chocokcakeV2/global/error/ErrorResponse.kt
package com.example.chocokcakeV2.global.error

data class ErrorResponse(
    val message: String,
    val data: String
)